docs: update README for Gradle build system